@@ -1,4 +1,5 @@
 0.45: (in development)
+    * No more tweet buttons flicker
     * New Twitter icon
     * Tweet length calculator is fixed for text with https links
     * Default Windows fonts is Segoe UI, Trebuchet MS, Tahoma, Verdana
